feat: add csv upload

--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "antd": "^5.8.6",
     "highcharts": "^11.1.0",
     "highcharts-react-official": "^3.2.1",
+    "papaparse": "^5.4.1",
     "proj4": "^2.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1"
   },
   "devDependencies": {
+    "@types/papaparse": "^5.3.14",
     "@types/proj4": "^2.5.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
